--- a/UserApp/.project
+++ b/UserApp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>UserAppEJB</name>
+	<name>UserApp</name>
 	<comment></comment>
 	<projects>
 	</projects>
