--- a/ChatAppEJB/.classpath
+++ b/ChatAppEJB/.classpath
@@ -14,5 +14,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/home/nina/Desktop/Helper.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ChatAppWeb"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
